--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <figcaption>Standard Poodle</figcaption>
                         </figure>
                     <p>
-                        Poodles are a group of formal dog breeds, the Standard
-                        Poodle, Miniature Poodle and Toy Poodle...
+                        Poodles are a group of formal dog breeds, the Standard Poodle, Miniature Poodle and Toy Poodle...
                     </p>
                 </article>
                 <article>
@@ -47,8 +46,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <figcaption>Standard Chihuahua</figcaption>
                         </figure>
                     <p>
-                    The Chihuahua is the smallest breed of dog, and is named
-                    after the Mexican state of Chihuahua...
+                        The Chihuahua is the smallest breed of dog, and is named after the Mexican state of Chihuahua...
                     </p>
                 </article>
             </section>
@@ -64,8 +62,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <figcaption>Standard Tabby</figcaption>
                         </figure>
                     <p>
-                        A tabby is any domestic cat with an 'M' on its forehead,
-                        stripes by its eyes and across its cheeks.
+                        A tabby is any domestic cat with an 'M' on its forehead, stripes by its eyes and across its cheeks.
                     </p>
                 </article>
                 <article>
@@ -78,7 +75,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <figcaption>Standard Calico</figcaption>
                         </figure>
                     <p>
-                    A calico cat is a domestic cat with a coat that is typically 25% to 75% white and has large orange and black patches.
+                        A calico cat is a domestic cat with a coat that is typically 25% to 75% white and has large orange and black patches.
                     </p>
                 </article>
             </section>
